<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="totalDistance">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="pricePerLiter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kmsPerLiter">KMs por Litro</string>
    <string name="totalExpense">Seu gasto total será de:</string>
    <string name="totalMoney">R$ 0</string>
    <string name="calculate">CALCULAR</string>

    <string name="validation_fill_all_fields">Preencha todos os campos corretamente!</string>
</resources>