<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalDistance"
        android:gravity="center"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pricePerLiter"
        android:gravity="center"/>

    <EditText
        android:id="@+id/autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/autonomy"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kmsPerLiter"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalExpense"
        android:textAllCaps="true"
        android:layout_marginTop="32dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/totalMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalMoney"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textColor="@color/purple_700"
        android:gravity="center"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="16dp"/>


</LinearLayout>